--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,14 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - iNCML
+  - Visualize-ML
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - iNCML/MachineLearningBook
+  - iNCML/incml.github.io
+  - iNCML/huijiang
+  - iNCML/FreebaseQACode
+  - iNCML/LLM_Simulation
+  - iNCML/DDM
+  
